# poker-hands-storage

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
crates/service/: Cargo.toml
crates/service/src/: action_schema.rs  api_doc.rs  builder.rs  config.rs  error.rs  hand_dict.rs  http.rs  lib.rs  main.rs  manifest.rs  meta_db.rs  naming.rs  pool.rs  query_service.rs  sqlite.rs  validation.rs
crates/service/src/benchmark/: benchmark_models.rs  benchmark_report.rs  cache_eviction.rs  cli.rs  cold_report.rs  cold_runner.rs  cold_types.rs  cold_worker.rs  hot_runner.rs  memory_snapshot.rs  mod.rs  result_verifier.rs  workload.rs
crates/service/src/config/: mod.rs
crates/service/src/domain/: action_schema.rs  hole_cards.rs  mod.rs
crates/service/src/errors/: app_error.rs
crates/service/src/http/: error_response.rs  mod.rs  openapi.rs  router.rs
crates/service/src/query/: dimension_handle_pool.rs  hand_query_service.rs  mod.rs
crates/service/src/range_store_builder/: build_orchestrator.rs
crates/service/src/routes/: hand_query_routes.rs  health.rs  health_routes.rs  metadata.rs  metadata_routes.rs  mod.rs  query.rs
crates/service/src/scripts/: benchmark.rs  benchmark_cold.rs  benchmark_cold_compare.rs  benchmark_compare.rs  benchmark_sqlite.rs  benchmark_sqlite_cold.rs  mod.rs  verify_store.rs
crates/service/src/storage/: mod.rs
crates/service/src/verification/: mod.rs
crates/service/src/verifier/: catalog.rs  cli_args.rs  mod.rs  precision.rs  report.rs  source_cross.rs  standalone.rs
crates/service/tests/: verifier_precision_report.rs  verifier_source_cross.rs  verifier_standalone.rs  verify_cli_args.rs
crates/service/tests/benchmark/: benchmark_report.test.rs  hot_runner.test.rs  result_verifier.test.rs  sqlite_runner.test.rs  workload.test.rs
crates/service/tests/common/: mod.rs
crates/service/tests/config/: service_config.test.rs
crates/service/tests/domain/: dimension.test.rs  hole_cards.test.rs
crates/service/tests/http/: router.test.rs
crates/service/tests/range_store_builder/: build_orchestrator.test.rs
crates/service/tests/scripts/: benchmark.test.rs  benchmark_7e.test.rs  verify_store.test.rs
crates/service/tests/support/: verify_store_fixture.rs
range-store-core/: Cargo.toml
range-store-core/src/: action_schema.rs  crc32c.rs  dimension.rs  dimension_reader.rs  hole_cards.rs  idx_reader.rs  lib.rs  manifest.rs  metadata.rs  pack_codec.rs  types.rs
range-store-core/src/query/: handle_pool.rs  hands_by_actions.rs  mod.rs  range_store_facade.rs  store_query_service.rs
range-store-core/src/sqlite/: mod.rs
range-store-core/tests/: query_contract.test.rs  traversal_and_decode.rs
range-store-core/tests/domain/: action_schema.test.rs  dimension.test.rs  hole_cards.test.rs
range-store-core/tests/storage/manifest/: manifest_reader.test.rs
range-store-core/tests/storage/sqlite/: sqlite_connection.test.rs
range-store-native/: Cargo.toml  index.d.ts  index.js  package.json
range-store-native/src/: lib.rs
range-store-native/tests/: http-consistency.test.js  sdk-contract.test.js
service/: Cargo.toml
service/src/: config.rs  errors.rs  lib.rs  main.rs
service/src/benchmark/: report.rs  types.rs
service/src/benchmark/cold/: report.rs  runner.rs  sqlite_runner.rs  sqlite_worker.rs
service/src/benchmark/sqlite/: cli.rs  (+1 more)
service/src/config/: service_config.rs
service/src/domain/: mod.rs
service/src/errors/: app_error.rs
service/src/http/: app_state.rs  blocking_task.rs  healthcheck.rs  openapi.rs  request_validation.rs  response.rs  server.rs
service/src/query/: dimension_handle_pool.rs  hand_query_service.rs  mod.rs
service/src/range_store_builder/: mod.rs
service/src/routes/: hand_query_routes.rs  metadata_routes.rs
service/src/storage/: mod.rs
service/src/verification/: catalog_checks.rs  cli.rs
service/tests/benchmark/: compare.test.rs  metrics.test.rs  workload.test.rs
service/tests/config/: service_config.test.rs
service/tests/domain/: action_schema.test.rs
service/tests/http/: router.test.rs
service/tests/scripts/: benchmark_7e.test.rs  verify_store.test.rs
service/tests/support/: api_test_fixture.rs
service/tests/verification/: float32_precision.test.rs
storage-tools/: Cargo.toml  build.rs
storage-tools/src/: errors.rs  lib.rs  main.rs  metadata.rs  range_store_builder.rs
storage-tools/src/benchmark/: cli.rs  metadata.rs  metrics.rs  mod.rs  report.rs  report_support.rs  types.rs  workload.rs
storage-tools/src/compact_line_matrix/: convert.rs  mod.rs  proto.rs
storage-tools/src/compact_line_matrix_archive/: benchmark.rs  cli.rs  format.rs  mod.rs
storage-tools/src/line_matrix_archive/: cli.rs  format.rs  mod.rs
storage-tools/src/line_matrix_export/: cli.rs  convert.rs  mod.rs  proto.rs  report.rs  source.rs
storage-tools/src/proto_range_storage/: benchmark.rs  cli.rs  line_matrix_codec.rs  line_matrix_store.rs  mod.rs  query_facade.rs  query_service.rs  three_way_benchmark.rs  three_way_cold_benchmark.rs  three_way_stability_benchmark.rs
storage-tools/src/range_store_builder/: build_orchestrator.rs  mod.rs
storage-tools/src/verification/: catalog_checks.rs  cli.rs  mod.rs  report.rs  standalone.rs
storage-tools/tests/: benchmark.test.rs  benchmark_7e.test.rs  compact_line_matrix_archive.test.rs  line_matrix_export.test.rs  proto_v3_cli.test.rs  proto_v3_format.test.rs  proto_v3_hand_strategy.test.rs  proto_v3_metadata.test.rs  proto_v3_query.test.rs  proto_v3_verification.test.rs  range_store_builder_build_orchestrator.test.rs  verify_store.test.rs
storage-tools/tests/benchmark/: benchmark_report.test.rs  compare.test.rs  hot_runner.test.rs  metrics.test.rs  result_verifier.test.rs  sqlite_runner.test.rs  workload.test.rs
storage-tools/tests/range_store_builder/: build_orchestrator.test.rs
storage-tools/tests/support/: verify_store_fixture.rs
storage-tools/tests/verification/: cross.test.rs  float32_precision.test.rs  standalone.test.rs
(+253 files in other folders)
