[package]
name = "range-store-native"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
range-store-core = { path = "../range-store-core" }
poker-hands-storage-tools = { path = "../storage-tools" }

[build-dependencies]
napi-build = "2"
