[package]
name = "poker-hands-storage-service"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[dependencies]
axum = "0.8"
range-store-core = { path = "../range-store-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[dev-dependencies]
poker-hands-storage-tools = { path = "../storage-tools" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "scripts_benchmark_test"
path = "tests/scripts/benchmark.test.rs"

[[test]]
name = "scripts_benchmark_7e_test"
path = "tests/scripts/benchmark_7e.test.rs"

[[test]]
name = "benchmark_metrics_test"
path = "tests/benchmark/metrics.test.rs"

[[test]]
name = "benchmark_workload_test"
path = "tests/benchmark/workload.test.rs"

[[test]]
name = "benchmark_report_test"
path = "tests/benchmark/benchmark_report.test.rs"

[[test]]
name = "benchmark_result_verifier_test"
path = "tests/benchmark/result_verifier.test.rs"

[[test]]
name = "benchmark_hot_runner_test"
path = "tests/benchmark/hot_runner.test.rs"

[[test]]
name = "benchmark_sqlite_runner_test"
path = "tests/benchmark/sqlite_runner.test.rs"

[[test]]
name = "benchmark_compare_test"
path = "tests/benchmark/compare.test.rs"

[[test]]
name = "domain_action_schema_test"
path = "tests/domain/action_schema.test.rs"

[[test]]
name = "domain_hole_cards_test"
path = "tests/domain/hole_cards.test.rs"

[[test]]
name = "domain_dimension_test"
path = "tests/domain/dimension.test.rs"

[[test]]
name = "config_service_config_test"
path = "tests/config/service_config.test.rs"

[[test]]
name = "storage_manifest_reader_test"
path = "tests/storage/manifest/manifest_reader.test.rs"

[[test]]
name = "storage_sqlite_connection_test"
path = "tests/storage/sqlite/sqlite_connection.test.rs"

[[test]]
name = "http_router_test"
path = "tests/http/router.test.rs"
