[package]
name = "poker-hands-storage-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[dependencies]
memmap2 = "0.9"
prost = "0.14"
rayon = "1"
range-store-core = { path = "../range-store-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "range_store_builder_build_orchestrator_test"
path = "tests/range_store_builder_build_orchestrator.test.rs"

[[test]]
name = "compact_line_matrix_archive_test"
path = "tests/compact_line_matrix_archive.test.rs"

[[test]]
name = "proto_v3_format_test"
path = "tests/proto_v3_format.test.rs"

[[test]]
name = "proto_v3_metadata_test"
path = "tests/proto_v3_metadata.test.rs"

[[test]]
name = "proto_v3_hand_strategy_test"
path = "tests/proto_v3_hand_strategy.test.rs"

[[test]]
name = "verification_float32_precision_test"
path = "tests/verification/float32_precision.test.rs"

[[test]]
name = "verification_cross_test"
path = "tests/verification/cross.test.rs"

[[test]]
name = "verification_standalone_test"
path = "tests/verification/standalone.test.rs"

[[test]]
name = "verification_markdown_report_test"
path = "tests/verification/report/markdown_report.test.rs"

[[test]]
name = "verification_report_totals_test"
path = "tests/verification/report/report_totals.test.rs"

[[test]]
name = "scripts_verify_store_test"
path = "tests/verify_store.test.rs"

[[test]]
name = "scripts_benchmark_test"
path = "tests/benchmark.test.rs"

[[test]]
name = "scripts_benchmark_7e_test"
path = "tests/benchmark_7e.test.rs"

[[test]]
name = "benchmark_metrics_test"
path = "tests/benchmark/metrics.test.rs"

[[test]]
name = "benchmark_workload_test"
path = "tests/benchmark/workload.test.rs"

[[test]]
name = "benchmark_report_test"
path = "tests/benchmark/benchmark_report.test.rs"

[[test]]
name = "benchmark_result_verifier_test"
path = "tests/benchmark/result_verifier.test.rs"

[[test]]
name = "benchmark_hot_runner_test"
path = "tests/benchmark/hot_runner.test.rs"

[[test]]
name = "benchmark_sqlite_runner_test"
path = "tests/benchmark/sqlite_runner.test.rs"

[[test]]
name = "benchmark_compare_test"
path = "tests/benchmark/compare.test.rs"
