[package]
name = "poker-hands-storage-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libloading = "0.9"
range-store-core = { path = "../range-store-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
