[package]
name = "poker-hands-storage-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
libloading = "0.9"
range-store-core = { path = "../range-store-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
